# transcription-engine

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: API.md  ARCHITECTURE.md
examples/: basic_transcribe.py  batch_jobs.py  cloud_transcribe.py  custom_plugin.py  real_time.py
src/transcribe/: __init__.py
src/transcribe/api/: __init__.py  async_api.py
src/transcribe/core/: __init__.py  engine.py  interfaces.py  models.py
src/transcribe/plugins/: __init__.py  base.py  plugin_manager.py
src/transcribe/source/: __init__.py  bytes_source.py  file_source.py  microphone_source.py
src/transcribe/stream/: __init__.py  stream_processor.py
src/transcribe/transcriber/: __init__.py  base.py  cloud_api.py  local_whisper.py
src/transcribe/utils/: __init__.py  audio.py  logging.py
tests/: __init__.py  test_core.py  test_engine.py  test_plugins.py
