[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcribe-engine"
version = "0.1.0"
description = "High-extensibility transcription engine — local/cloud, real-time, plugin-driven"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    {name = "Hermes Agent", email = "admin@nousresearch.com"},
]
keywords = ["transcription", "whisper", "stt", "asr", "speech-to-text"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

dependencies = [
    "numpy>=1.24",
    "soundfile>=0.12",
    "pydub>=0.25",
]

[project.optional-dependencies]
local = [
    "openai-whisper>=20231117",
    "torch>=2.0",
]
cloud = [
    "openai>=1.0",
    "httpx>=0.25",
]
stream = [
    "sounddevice>=0.4",
    "pyaudio>=0.2",
]
full = [
    "transcribe-engine[local,cloud,stream]",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.entry-points."transcribe.plugins"]
# Plugin discovery — third-party packages can register transcribers here:
# my_transcriber = "my_package.transcriber:MyTranscriber"

[tool.setuptools.packages.find]
where = ["src"]
